fix: dark mode latence

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,6 @@ footer{
     text-align: center;
     font-size: 24px;
     position: relative;
-    width:fit-content ;
     bottom: 50px;
     left: 0;
 }
